...
                    android:layout_marginStart="@dimen/space_2x"
                    app:layout_constraintLeft_toRightOf="@id/img_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/img_title">

                    <EditText
                        android:id="@+id/txt_journal_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:hint="@string/journal_title"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
...
                    android:layout_marginStart="@dimen/space_2x"
                    app:layout_constraintLeft_toRightOf="@id/img_journal_text"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/img_journal_text">

                    <EditText
                        android:id="@+id/txt_journal_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:gravity="top"
                        android:hint="@string/entry_hint"
                        android:inputType="textCapSentences|textMultiLine"
...
